# IMD0030

lab1-figuras/: Makefile
lab1-figuras/.github/classroom/: autograding.json
lab1-figuras/include/: circulo.h  cubo.h  esfera.h  paralelepipedo.h  piramide.h  quadrado.h  retangulo.h  triangulo.h
lab1-figuras/src/: CMakeLists.txt  circulo.cpp  cubo.cpp  esfera.cpp  main.cpp  paralelepipedo.cpp  piramide.cpp  quadrado.cpp  retangulo.cpp  triangulo.cpp
